2015-05-22  Matthew Mundell <matthew.mundell@greenbone.net>

	* misc/ldap_connect_auth.c: Define dummy functions when ENABLE_LDAP_AUTH
	is not defined.

2015-05-22  Matthew Mundell <matthew.mundell@greenbone.net>

	* doc/example.auth.conf: Remove.  No longer used.

2015-05-21  Matthew Mundell <matthew.mundell@greenbone.net>

	Remove remaining unused parts of auth.

	* misc/openvas_auth.c: Remove file doc which is out of date.
	(authenticators, ldap_connect_configured, struct authenticator)
	(authenticator_t, get_ldap_info, order_compare)
	(classic_authenticator_new): Remove.  No longer used.
	(openvas_auth_init_funcs): Remove.  Now openvas_auth_init.
	(openvas_auth_init): New function.  Was openvas_auth_init_funcs.  Remove
	ldap arg.

	* misc/openvas_auth.h: Update headers accordingly.

2015-05-21  Matthew Mundell <matthew.mundell@greenbone.net>

	* misc/openvas_auth.c (classic_get_hash): Remove.  No longer used.
	(openvas_auth_init_funcs): Remove get_hash arg.
	(openvas_authenticate_classic): Replace unused data arg with hash arg.
	Use hash arg instead of calling function.

	* misc/openvas_auth.h: Update headers accordingly.

2015-05-21  Matthew Mundell <matthew.mundell@greenbone.net>

	Remove the mechanism for multiple configurable authentication methods,
	and associated functions.  Expose the basics of classic and LDAP auth so
	that Manager can call these.

	* src/CMakeLists.txt (FILES, HEADERS): Add ldap_connect_auth files.

	* misc/ldap_connect_auth.h: Expose some headers even when LDAP is not
	compiled, so that Manager can refer to them.

	* misc/openvas_auth.c: (struct authenticator): Remove fields.  No
	longer used.
	(openvas_auth_ldap_enabled): New function.
	(classic_authenticator_new): Remove fields.
	(openvas_auth_init_funcs): Remove callback args.  No longer used.
	(openvas_authenticate_classic): Export for Manager.
	(can_user_ldap_connect, openvas_authenticate_method)
	(openvas_user_uuid_method, openvas_user_exists_classic)